--- a/src/balancerd/Cargo.toml
+++ b/src/balancerd/Cargo.toml
@@ -19,6 +19,7 @@ chrono = { version = "0.4.39", default-features = false, features = ["std"] }
 clap = { version = "4.5.23", features = ["derive", "env"] }
 domain = { version = "0.11.1", default-features = false, features = ["resolv"] }
 futures = "0.3.31"
+hickory-resolver = "0.25.2"
 humantime = "2.3.0"
 hyper = { version = "1.4.1", features = ["http1", "server"] }
 hyper-openssl = "0.10.2"
