--- a/src/workspace-hack/Cargo.toml
+++ b/src/workspace-hack/Cargo.toml
@@ -80,6 +80,7 @@ hashbrown = { version = "0.14.5", default-features = false, features = ["allocat
 hyper-582f2526e08bb6a0 = { package = "hyper", version = "0.14.27", features = ["client", "http1", "http2", "stream", "tcp"] }
 hyper-util = { version = "0.1.19", features = ["client-legacy", "server-auto", "service", "tracing"] }
 insta = { version = "1.45.1", features = ["json"] }
+ipnet = { version = "2.11.0" }
 itertools = { version = "0.13.0" }
 libc = { version = "0.2.180", features = ["extra_traits", "use_std"] }
 libz-sys = { version = "1.1.23", features = ["static"] }
@@ -97,6 +98,7 @@ nom = { version = "7.1.3" }
 num-bigint = { version = "0.4.6", features = ["serde"] }
 num-integer = { version = "0.1.46", features = ["i128"] }
 num-traits = { version = "0.2.19", features = ["i128", "libm"] }
+once_cell = { version = "1.21.3", features = ["critical-section"] }
 parking_lot = { version = "0.12.5", features = ["serde"] }
 parquet = { version = "57.1.0", features = ["async"] }
 percent-encoding = { version = "2.3.2" }
@@ -227,6 +229,7 @@ hashbrown = { version = "0.14.5", default-features = false, features = ["allocat
 hyper-582f2526e08bb6a0 = { package = "hyper", version = "0.14.27", features = ["client", "http1", "http2", "stream", "tcp"] }
 hyper-util = { version = "0.1.19", features = ["client-legacy", "server-auto", "service", "tracing"] }
 insta = { version = "1.45.1", features = ["json"] }
+ipnet = { version = "2.11.0" }
 itertools = { version = "0.13.0" }
 libc = { version = "0.2.180", features = ["extra_traits", "use_std"] }
 libz-sys = { version = "1.1.23", features = ["static"] }
@@ -244,6 +247,7 @@ nom = { version = "7.1.3" }
 num-bigint = { version = "0.4.6", features = ["serde"] }
 num-integer = { version = "0.1.46", features = ["i128"] }
 num-traits = { version = "0.2.19", features = ["i128", "libm"] }
+once_cell = { version = "1.21.3", features = ["critical-section"] }
 parking_lot = { version = "0.12.5", features = ["serde"] }
 parquet = { version = "57.1.0", features = ["async"] }
 percent-encoding = { version = "2.3.2" }
