--- a/src/testdrive/Cargo.toml
+++ b/src/testdrive/Cargo.toml
@@ -21,6 +21,7 @@ byteorder = "1.5"
 bytes = "1.10.1"
 chrono = { version = "0.4.39", default-features = false, features = ["std"] }
 clap = { version = "4.5.23", features = ["derive"] }
+duckdb = { version = "1.1.1", features = ["bundled"] }
 flate2 = "1.1.5"
 futures = "0.3.31"
 globset = "0.4.18"
