--- a/ci/builder/requirements.txt
+++ b/ci/builder/requirements.txt
@@ -11,6 +11,7 @@ boto3==1.41.5
 click==8.1.3
 cryptography==46.0.3
 colored==2.3.1
+deepdiff==8.6.1
 docker==7.1.0
 ec2instanceconnectcli==1.0.3
 python-frontmatter==1.1.0
