--- a/src/authenticator/Cargo.toml
+++ b/src/authenticator/Cargo.toml
@@ -8,9 +8,13 @@ rust-version.workspace = true
 publish = false
 
 [dependencies]
+jsonwebtoken = "9.3.1"
 mz-adapter = { path = "../adapter", default-features = false }
 mz-frontegg-auth = { path = "../frontegg-auth", default-features = false }
+reqwest = "0.12.24"
 serde = { version = "1.0.219", features = ["derive"] }
+tracing = "0.1.43"
+tokio = { version = "1.48.0", default-features = false }
 workspace-hack = { version = "0.0.0", path = "../workspace-hack", optional = true }
 
 [lints]
