--- a/src/catalog-debug/Cargo.toml
+++ b/src/catalog-debug/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mz-catalog-debug"
 description = "Durable metadata storage debug tool."
-version = "26.4.0-rc.3"
+version = "26.4.0"
 edition.workspace = true
 rust-version.workspace = true
 publish = false
