--- a/src/materialized/Cargo.toml
+++ b/src/materialized/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "mz-materialized"
 description = "Materialize's unified binary."
-version = "26.4.0-rc.3"
+version = "26.4.0"
 edition.workspace = true
 rust-version.workspace = true
 publish = false
