move global environment resources to their own controller

--- a/misc/helm-charts/operator/templates/clusterrole.yaml
+++ b/misc/helm-charts/operator/templates/clusterrole.yaml
@@ -88,6 +88,8 @@ rules:
   resources:
   - materializes
   - materializes/status
+  - environments
+  - environments/status
   - balancers
   - balancers/status
   - consoles
